--- a/RepasoCombos/RepasoCombos/Web.config
+++ b/RepasoCombos/RepasoCombos/Web.config
@@ -1,15 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <connectionStrings>
-    <!--<add name="NORTHWNDConnectionString" connectionString="Data Source=DESKTOP-UR22F4Q\INSTANCIA1;Initial Catalog=NORTHWND;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
-	<add name="NORTHWNDConnectionString" connectionString="Data Source=T06W02;Initial Catalog=NORTHWND;User ID=SA;Password=MCSD2022"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
